--- a/KM/.obsidian/workspace
+++ b/KM/.obsidian/workspace
@@ -147,15 +147,15 @@
   },
   "active": "2936ea1464c0f84f",
   "lastOpenFiles": [
+    "Notes/Books/An Introduction to Bioinformatics Algorithms (EN).md",
+    "README.md",
     "KM/Notes/Bioinformatics/01 Bioinformatics.md",
     "Notes/Bioinformatics/01 Bioinformatics.md",
-    "README.md",
     "Notes/Bioinformatics/Ref Bioinformatics Books.md",
     "Notes/Bioinformatics/Ref Bioinformatics Tutorials.md",
     "Dictionary/Bioinfo dictionary en/Bioinfo terms/1000 Genomes Project.md",
     "Dictionary/Bioinfo dictionary en/Bioinfo terms/bioinformatics.md",
     "Dictionary/Bioinfo dictionary en/Bioinfo terms/biology.md",
-    "Dictionary/Bioinfo dictionary en/Bioinfo terms/cell.md",
-    "Dictionary/Bioinfo dictionary en/Bioinfo terms/gene.md"
+    "Dictionary/Bioinfo dictionary en/Bioinfo terms/cell.md"
   ]
 }
