--- a/KM/.obsidian/workspace
+++ b/KM/.obsidian/workspace
@@ -147,15 +147,15 @@
   },
   "active": "13f9bfe743f549bb",
   "lastOpenFiles": [
+    "Notes/Attachments/Books/Human-Evolutionary-Genetics/chromosome-DNA.png",
+    "Notes/Books/Human Evolutionary Genetics (EN).md",
+    "Notes/Attachments/Books/Human-Evolutionary-Genetics/genome-repeat.png",
     "Notes/Books/An Introduction to Bioinformatics Algorithms (JA).md",
     "Notes/Attachments/Books/Human-Evolutionary-Genetics/protein-coding-gene.png",
-    "Notes/Books/Human Evolutionary Genetics (EN).md",
     "Notes/Attachments/Books/Human-Evolutionary-Genetics/protein-coding-gene 1.png",
     "Dictionary/Bioinfo dictionary en/Bioinfo terms/central dogma.md",
     "Dictionary/Bioinfo dictionary en/Bioinfo terms/chromosome.md",
     "Dictionary/Bioinfo dictionary ja/Bioinfo terms/セントラルドグマ.md",
-    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/細胞.md",
-    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/メンデルの法則.md",
-    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/バイオインフォマティクス.md"
+    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/細胞.md"
   ]
 }
