--- a/KM/.obsidian/workspace
+++ b/KM/.obsidian/workspace
@@ -147,15 +147,15 @@
   },
   "active": "6ddde1c4ebc59af6",
   "lastOpenFiles": [
-    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/ミトコンドリア.md",
-    "Dictionary/Bioinfo dictionary en/Bioinfo terms/mitochondria.md",
-    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/ゲノム.md",
-    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/ゲノミクス.md",
-    "Dictionary/Bioinfo dictionary en/Bioinfo terms/1000 Genomes Project.md",
-    "Dictionary/Bioinfo dictionary en/Bioinfo terms/genomics.md",
-    "Dictionary/Bioinfo dictionary en/Bioinfo terms/mendelian laws.md",
-    "Dictionary/Bioinfo dictionary en/Bioinfo terms/genome.md",
+    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/生物学.md",
     "Notes/Books/Human Evolutionary Genetics (EN).md",
-    "Notes/Books/An Introduction to Bioinformatics Algorithms (JA).md"
+    "Utilities/Markdown.md",
+    "Notes/Books/An Introduction to Bioinformatics Algorithms (JA).md",
+    "Utilities/MathJax-LaTeX.md",
+    "Dictionary/Bioinfo dictionary en/Bioinfo terms/CF.md",
+    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/嚢胞性線維症.md",
+    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/メンデルの法則.md",
+    "Dictionary/Bioinfo dictionary en/Bioinfo terms/mitochondria.md",
+    "Dictionary/Bioinfo dictionary en/Bioinfo terms/mendelian laws.md"
   ]
 }
