--- a/KM/.obsidian/workspace
+++ b/KM/.obsidian/workspace
@@ -14,6 +14,18 @@
             "source": false
           }
         }
+      },
+      {
+        "id": "d06df36d3b6d95b0",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Utilities/Markdown.md",
+            "mode": "source",
+            "source": false
+          }
+        }
       }
     ],
     "direction": "vertical"
@@ -147,15 +159,15 @@
   },
   "active": "6ddde1c4ebc59af6",
   "lastOpenFiles": [
-    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/生物学.md",
+    "Dictionary/Bioinfo dictionary en/Bioinfo terms/SNP.md",
     "Notes/Books/Human Evolutionary Genetics (EN).md",
+    "Dictionary/Bioinfo dictionary en/Bioinfo terms/central dogma.md",
+    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/ゲノム.md",
+    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/ゲノミクス.md",
+    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/一塩基多型.md",
     "Utilities/Markdown.md",
-    "Notes/Books/An Introduction to Bioinformatics Algorithms (JA).md",
-    "Utilities/MathJax-LaTeX.md",
     "Dictionary/Bioinfo dictionary en/Bioinfo terms/CF.md",
-    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/嚢胞性線維症.md",
-    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/メンデルの法則.md",
-    "Dictionary/Bioinfo dictionary en/Bioinfo terms/mitochondria.md",
-    "Dictionary/Bioinfo dictionary en/Bioinfo terms/mendelian laws.md"
+    "Dictionary/Bioinfo dictionary en/Bioinfo terms/cell.md",
+    "Dictionary/Bioinfo dictionary ja/Bioinfo terms/生物学.md"
   ]
 }
