--- a/KM/.obsidian/appearance.json
+++ b/KM/.obsidian/appearance.json
@@ -1,4 +1,5 @@
 {
-  "baseFontSize": 20,
-  "cssTheme": "Obsidian Nord"
+  "baseFontSize": 16,
+  "cssTheme": "Obsidian Nord",
+  "accentColor": ""
 }
